# oidfed_metadata_policy

./: Cargo.toml  LICENSE  README.md  publiccode.yml
src/: lib.rs  main.rs
