[package]
name = "oidfed_metadata_policy"
version = "0.0.1"
authors = ["Kushal Das <kushal@sunet.se>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/SUNET/oidfed_metadata_policy"
description = "To merge and resolve and apply OpenID Federation metadata policy"
exclude = ["data/**/*",]


[lib]
doctest = false

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4"
serde_json = "1.0.140"


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
